pov-admin-tools (0.6) precise; urgency=low

  * machine-summary 0.4:
    - guesstimate memory size as a round number of gigabytes
    - drop .0 from integer sizes

 -- Marius Gedminas <marius@gedmin.as>  Tue, 13 Aug 2013 14:06:10 +0300

pov-admin-tools (0.5) precise; urgency=low

  * Link to GitHub repository.
  * Add pov-check-health to Recommends.

 -- Marius Gedminas <marius@pov.lt>  Mon, 22 Jul 2013 15:38:38 +0300

pov-admin-tools (0.4) precise; urgency=low

  * Handle VPS systems without /sys/block.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 19 Jul 2013 10:06:43 +0300

pov-admin-tools (0.3) precise; urgency=low

  * Change Recommends: to accept other MTAs instead of insisting on postfix.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 18 Jul 2013 20:48:16 +0300

pov-admin-tools (0.2) precise; urgency=low

  * new-changelog-entry, when run as non-root, would create a file with a
    "/root/Changelog" message instead of launching vim when /root/Changelog
    didn't exist.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 18 Jul 2013 20:38:48 +0300

pov-admin-tools (0.1) precise; urgency=low

  * Initial release.  Contains:
    - new-changelog-entry version 1.0.1
    - machine-summary version 0.2
    - disk-inventory version 1.1.3

 -- Marius Gedminas <marius@gedmin.as>  Thu, 18 Jul 2013 18:36:37 +0300