@@ -2,3 +2,6 @@ debian/pov-admin-tools/
 debian/pov-admin-tools.substvars
 debian/pov-admin-tools.debhelper.log
 debian/files
+*.pyc
+*.pyo
+__pycache__/
