@@ -3,6 +3,9 @@ pov-admin-tools (0.6) precise; urgency=low
   * machine-summary 0.4:
     - guesstimate memory size as a round number of gigabytes
     - drop .0 from integer sizes
+  * Added 'make test' and some test cases for machine-summary.
+  * Renamed machine-summary to machine_summary.py for easier development
+    (it's renamed back to the old name during 'make install').
 
  -- Marius Gedminas <marius@gedmin.as>  Tue, 13 Aug 2013 14:06:10 +0300
 
